--- a/imageSpinner.css
+++ b/imageSpinner.css
@@ -2,23 +2,42 @@ html{box-sizing: border-box}
 *,*::before,*::after{
     box-sizing: inherit
 }
-
-
-
-.container {
-    position:fixed; 
-    top:-50%; 
-    left:-50%; 
-    width:200%; 
-    height:200%;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: whitesmoke;
+    font-size:150%;
 }
-.container img {
-    position:absolute; 
-    top:0; 
-    left:0; 
-    right:0; 
-    bottom:0; 
-    margin:auto; 
-    min-width:50%;
-    min-height:50%;
+a{
+    color: blue;
+}
+.main-class{
+    width: 520px;
+    margin:auto;
+    background-color:white;
+    border: 1px solid #ddd;
+    padding:10px;
+}
+.header{
+    padding: 15px;
+    font-size:100%;
+    background-color: teal;
+    color:white;
+}
+img{
+    width:500px;
+}
+.slider ul {
+  list-style: none;
+  width: 500px; 
+  position: relative; 
+  left: 0px; 
+  padding: 0; 
+  margin: 0;
+}
+.slider ul li {
+  float: left;
+}
+.slider{
+    width:500px;
+    overflow: hidden;
 }
